--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
   "repository": "https://github.com/angular/angular-seed",
   "license": "MIT",
   "dependencies": {
-    "bower": "^1.7.7",
+    "bower": "^1.7.7"
   },
   "devDependencies": {
     "bower": "^1.7.7",
-    "http-server": "^0.9.0",
+    "http-server": "^0.9.0"
   },
   "scripts": {
     "postinstall": "bower install",
     "prestart": "npm install",
-    "start": "http-server -a localhost -p 8000 -c-1 ./app",
+    "start": "http-server -a localhost -p 8000 -c-1 ./app"
   }
 }
