--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "repository": "https://github.com/angular/angular-seed",
   "license": "MIT",
   "dependencies": {
-    "bower": "^1.7.7"
+    "bower": "^1.7.7",
+    "http-server": "^0.9.0"
   },
   "devDependencies": {
     "bower": "^1.7.7",
