--- a/package.json
+++ b/package.json
@@ -6,16 +6,14 @@
   "repository": "https://github.com/angular/angular-seed",
   "license": "MIT",
   "dependencies": {
-    "bower": "^1.7.7",
-    "http-server": "^0.9.0"
+    "bower": "^1.7.7"
   },
   "devDependencies": {
-    "bower": "^1.7.7",
-    "http-server": "^0.9.0"
+    "bower": "^1.7.7"
   },
   "scripts": {
     "postinstall": "bower install",
     "prestart": "npm install",
-    "start": "http-server -a localhost -p 8000 -c-1 ./app"
+    "start": "node server.js"
   }
 }
