--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
-  "name": "angular-seed",
+  "name": "sammys-web",
   "private": true,
-  "version": "0.0.0",
-  "description": "A starter project for AngularJS",
-  "repository": "https://github.com/angular/angular-seed",
+  "version": "0.0.1",
   "license": "MIT",
   "dependencies": {
-    "bower": "^1.7.7"
-  },
-  "devDependencies": {
-    "bower": "^1.7.7"
+    "bower": "^1.7.7",
+    "request": "^2.67.0",
+    "express": "^4.13.3"
   },
   "scripts": {
     "postinstall": "bower install",
