--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "express": "^4.13.3"
   },
   "scripts": {
+    "postinstall": "bower install",
+    "prestart": "npm install",
     "start": "node server.js"
   }
 }
