--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,6 @@
     "angular": "^1.5.8",
     "angular-route": "^1.5.8",
     "html5-boilerplate": "^5.3.0",
-    "materialize": "^0.97.8"
+    "bootstrap": "^3.3.7"
   }
 }
