--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "license": "MIT",
   "dependencies": {
     "bower": "^1.7.7",
-    "request": "^2.67.0",
-    "express": "^4.13.3"
+    "express": "^4.13.3",
+    "request": "^2.67.0"
   },
   "scripts": {
     "postinstall": "bower install",
