--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "bower": "^1.7.7",
     "express": "^4.13.3",
     "node-sass": "^4.1.1",
+    "nodemon": "^1.11.0",
     "request": "^2.67.0"
   },
   "scripts": {
     "build-css": "node-sass --include-path scss app/css/app.scss   app/css/compiled/app.css",
+    "watch-css": "nodemon -e scss -x \"npm run build-css\"",
     "postinstall": "bower install",
     "prestart": "npm install",
-    "start": "npm run build-css && node server.js"
+    "start": "npm run build-css && npm run watch-css && node server.js"
   }
 }
