--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
     "watch-css": "nodemon -e scss -x \"npm run build-css\"",
     "postinstall": "bower install",
     "prestart": "npm install",
-    "start": "npm run build-css && npm run watch-css && node server.js"
+    "start": "npm run build-css && node server.js & npm run watch-css"
   }
 }
